# xian-intentkit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LLM.md  README.md  docker-compose.yml  pyproject.toml  release_notes.md
.github/workflows/: build.yml  docs.yml  lint.yml  release.yml
agent_docs/: ops_guide.md
agent_docs/todo/: 01-team-billing-p0.md  02-pricing-plans-p1.md  03-billing-frontend-p2.md  99-acp-agentic-commerce.md
app/: api.py  autonomous.py  scheduler.py
app/common/: __init__.py  autonomous.py  chat.py  metadata.py  schema.py  wechat.py
app/entrypoints/: autonomous.py
app/local/: __init__.py  agent.py  autonomous.py  chat.py  content.py  health.py  lead.py  metadata.py  public.py  schema.py  wechat.py
app/team/: __init__.py  agent.py  api.py  auth.py  autonomous.py  chat.py  content.py  lead.py  share.py  team.py  usage.py  user.py  wechat.py
docs/: go.mod  hugo.yaml
docs/plans/: 2026-03-26-rich-media-messaging-design.md  2026-03-26-rich-media-messaging-plan.md  2026-03-30-discover-page.md
frontend/: Dockerfile  Dockerfile.dev  eslint.config.mjs  package-lock.json  package.json
integrations/: go.mod  go.sum
integrations/shared/: dispatcher.go  sse.go
intentkit/: README.md  __init__.py
intentkit/clients/: moralis.py  s3.py  s3_setup.py  supabase.py  twitter.py
intentkit/config/: config.py  db.py  db_mig.py
intentkit/core/: account_checking.py  agent_activity.py  agent_post.py  api.py  asset.py  autonomous.py  avatar.py  budget.py  chat.py  cleanup.py  engine.py  executor.py  memory.py  middleware.py  prompt.py  public_agents.py  public_api.py  scheduler.py  statistics.py  template.py  user.py  xian_event_triggers.py
intentkit/models/: agent_activity.py  agent_data.py  app_setting.py  chat.py  draft.py  llm.csv  llm.py  llm_picker.py  share_link.py  skill.py  team.py  team_channel.py  team_feed.py  user.py  x402_order.py
intentkit/skills/: base.py  onchain.py
intentkit/testing/: __init__.py  xian_trade_social_live.py  xian_trade_social_workflow.py
intentkit/utils/: alert.py  alert_handler.py  chain.py  error.py  logging.py  opengraph.py  pdf.py  schema.py  slack_alert.py  time.py  tx.py  upload.py
intentkit/wallets/: __init__.py  cdp.py  evm_wallet.py  native.py  privy_client.py  privy_nonce.py  privy_safe.py  privy_signer.py  xian.py  xian_networks.py
public_agents/: academic-researcher.yaml  blog-writer.yaml  book-summarizer.yaml  business-plan-writer.yaml  code-explainer.yaml  competitor-analyst.yaml  contract-reviewer.yaml  daily-briefing.yaml  email-copywriter.yaml  fact-checker.yaml  financial-analyst.yaml  fitness-coach.yaml  grant-finder.yaml  high-quality-translator.yaml  language-coach.yaml  market-researcher.yaml  meeting-minutes.yaml  newsletter-curator.yaml  nutrition-planner.yaml  pitch-deck-advisor.yaml  product-description-writer.yaml  reddit-analyst.yaml  resume-coach.yaml  seo-optimizer.yaml  social-media-manager.yaml  story-generator.yaml  study-tutor.yaml  travel-planner.yaml  trend-spotter.yaml  youtube-summarizer.yaml
scripts/: batch_migrate_skills.py  check_credit_event_consistency.py  check_credit_event_consistency_with_base.py  check_credit_transaction_consistency.py  check_imports.py  check_imports_comprehensive.py  cleanup_checkpoints.py  diagnose_platform_fee_balance.py  export_cdp_wallet_private_keys.py  export_single_cdp_key.py  fix_credit_accounts_from_transactions.py  fix_credit_event_consistency.py  fix_credit_event_consistency_optimized.py  fix_credit_precision.py  fix_invalid_wallets.py  fix_release_titles.py  list_agent_assets.py  migrate_add_user_name_avatar.py  migrate_base_amounts.py  migrate_credit_account_statistics.py  migrate_credit_transaction_amounts.py  migrate_push_channel.sql  reward_team.py  sync_states_schema.py  test_xian_trade_social_live.py  test_xian_trade_social_workflow.py  transfer_cdp_agent_wallets.py  verify_infura.py  verify_privy_wallet.py
tests/: conftest.py
tests/bdd/: conftest.py  test_agent_public_info.py  test_agent_skill_sanitize.py  test_agent_slug.py  test_engine_conversation.py  test_onchain_aave_v3.py  test_onchain_aerodrome.py  test_onchain_erc20.py  test_onchain_erc721.py  test_onchain_morpho.py  test_onchain_pancakeswap.py  test_onchain_uniswap.py
tests/clients/: test_moralis.py  test_supabase.py
tests/core/: test_agent_activity.py  test_agent_asset.py  test_agent_management.py  test_autonomous_entrypoint.py  test_avatar.py  test_cached_input_pricing.py  test_core_autonomous.py  test_credit.py  test_credit_soft_off.py  test_engine.py  test_feed_fanout.py  test_lead_service.py  test_lead_sub_agents.py  test_llm.py  test_memory.py  test_prompt_memory.py  test_public_agents_sync.py  test_push_channel.py  test_recursion.py  test_scheduler.py  test_skill_registry.py  test_skill_validation.py  test_system_skills.py  test_team_channel.py  test_team_feed.py  test_team_membership.py  test_team_subscription.py  test_template.py  test_web_search_cost.py  test_xian_agent_integration.py  test_xian_event_triggers.py  test_xian_trade_social_live.py  test_xian_trade_social_workflow.py
tests/local/: test_agent_list_filter.py  test_autonomous.py  test_chat.py  test_content.py  test_public_api.py  test_schema.py  test_subscription.py
tests/manual/: verify_redundant_fields.py
tests/models/: test_llm_picker.py  test_team.py  test_team_plan.py  test_x402_order.py
(+438 files in other folders)
